# ERAD

./: .gitignore  CMakeLists.txt  README.md
cmake/: NoInSourceBuilds.cmake  Testing.cmake
src/: CMakeLists.txt
src/erad/: CMakeLists.txt  Drive.cpp  File.cpp  FileQueue.cpp  MemoryManager.cpp  erad.cpp
src/erad/include/erad/: Drive.h  File.h  FileQueue.h  MemoryManager.h  erad.h
src/erad_console/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/erad/: CMakeLists.txt  erad_test.cpp
